Added support for Minecraft 1.16.5, 1.17.1, 1.18.2, 1.19.2 and 1.20.6
Added support for Minecraft 1.16.5, 1.17.1, 1.18.2, 1.19.2 and 1.20.6

Added README