@@ -6,19 +6,21 @@ import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
 import net.minecraft.command.CommandSource;
 import net.minecraft.server.command.ServerCommandSource;
-import net.minecraft.text.Text;
 import net.minecraft.util.math.BlockPos;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.List;
-import java.util.Objects;
+import java.util.Arrays;
+import java.util.LinkedList;
 import java.util.concurrent.CompletableFuture;
-import java.util.function.Supplier;
 
-public class CommandUtils {
+public final class CommandUtils {
 
     public static boolean checkPermission(ServerCommandSource source, boolean needNotOp, boolean needNotPlayer) {
-        return (source.isExecutedByPlayer() || needNotPlayer) && (Objects.requireNonNull(source.getPlayer()).hasPermissionLevel(4) || needNotOp);
+        try {
+            return (MethodWrapper.isExecutedByPlayer(source) || needNotPlayer) && (source.getPlayerOrThrow().hasPermissionLevel(source.getServer().getOpPermissionLevel()) || needNotOp);
+        } catch (CommandSyntaxException e) {
+            return false;
+        }
     }
 
     public static CompletableFuture<Suggestions> playerSuggestionProvider(CommandContext<ServerCommandSource> context, SuggestionsBuilder builder) {
@@ -28,19 +30,11 @@ public class CommandUtils {
     public static CompletableFuture<Suggestions> vec3dSuggestionProvider(CommandContext<ServerCommandSource> context, SuggestionsBuilder builder)
             throws CommandSyntaxException {
         final @NotNull ServerCommandSource source = context.getSource();
-        if (source.isExecutedByPlayer()) {
+        if (MethodWrapper.isExecutedByPlayer(source)) {
             final @NotNull BlockPos pos = source.getPlayerOrThrow().getBlockPos();
-            return CommandSource.suggestMatching(List.of("%.1f %.1f %.1f".formatted(pos.getX() + 0.5, pos.getY() + 0.5, pos.getZ() + 0.5)), builder);
+            return CommandSource.suggestMatching(Arrays.asList(String.format("%.1f %.1f %.1f", pos.getX() + 0.5, pos.getY() + 0.5, pos.getZ() + 0.5)), builder);
         }
-        return CommandSource.suggestMatching(List.of(), builder);
-    }
-
-    public static void sendFeedback(ServerCommandSource source, Supplier<Text> txt, boolean broadcastToOps) {
-        //#if MC>=12000
-        source.sendFeedback(txt, broadcastToOps);
-        //#else
-        //$$ source.sendFeedback(txt.get(), broadcastToOps);
-        //#endif
+        return CommandSource.suggestMatching(new LinkedList<>(), builder);
     }
 
 }
